# OFICVD

./: .coverage  .cursorrules  .gitignore  Makefile  README.md  README_BINANCE_API.md  TASK_INDEX.md  TASK_P3_CONFIRM_FUNNEL_BASELINE.md  TASK_PARAM_CORE_TUNING_CoreAlgorithm_信号参数调优.md.md  check_harvest_data.py  check_processes.py  commit_msg.txt  harvest_check_report.md  pyproject.toml  pytest.ini  run_confirm_tuning_experiments.py  smoke_test.py  task02_completion_analysis.md  test_a_mode.py  test_reemit_signals.py  workspace.txt  ☁️接下来优先做的三件事（按顺序来）.md  策略层回迁.md
.github/: PULL_REQUEST_TEMPLATE.md
config/: backtest.yaml  backtest_ultra_relaxed.yaml  confirm_tuning_profiles.yaml  core_confirm_explore_relaxed.yaml  core_confirm_prod_like.yaml  core_confirm_relaxed_thresholds.yaml  core_confirm_tuning_A1.yaml  core_confirm_tuning_A2.yaml  core_confirm_tuning_B1.yaml  core_confirm_ultra_relaxed.yaml  defaults.prod.from_other.yaml  defaults.replay.yaml  defaults.signal_v2.yaml  defaults.smoke.from_other.yaml  defaults.smoke.yaml  defaults.staging.yaml  defaults.t3_live_small_flow.yaml  defaults.testnet_signal_v2.yaml  defaults.yaml  gating_experiment_ignore_soft.yaml  gating_experiment_strict.yaml  optimizer_search_space.json  schema_maps.yaml  stage1_consistency.yaml  stage1_consistency_consistency_inject.yaml  stage1_consistency_consistency_trigger.yaml  stage1_consistency_lag_inject.yaml  stage1_consistency_lag_trigger.yaml  stage1_consistency_spread_trigger.yaml  stage1_shadow.yaml
configs/: backtest.yaml
docs/: P0-修复验证检查清单.md  alerting_rules.md  api_contracts.md  api_contracts_signal_v2.md  architecture_flow.md  backtest_guide.md  binance_api_signature_guide.md  binance_live_setup.md  binance_testnet_setup.md  confirm_funnel_baseline_report.md  core_confirm_param_tuning.md  dashboard_minimal.md  data_quality.md  equivalence_guide.md  gray_release_runbook.md  harvest_concurrent_guide.md  harvest_output_directories.md  mcp_quick_reference.md  mcp_usage_guide.md  orchestrator_smoke.md  order_state_machine.md  参数契约.md
legacy/: README.md
orchestrator/: run.py
reports/: ABCD组多交易对优化结果报告.md  E4E5E6实验启动总结.md  E4E5E6实验结果报告.md  F2F3F4功能实现报告.md  F2F3F4单元测试报告.md  F系列实验-STAGE1版本总结.md  F系列实验执行说明-STAGE1.md  M2-冒烟测试复盘报告.md  P0-Orchestrator-优化修复验证报告.md  P0-P1优化实施总结.md  P0-P1优化验证报告.md  P0-StrategyMode-100-Quiet-修复验证报告.md  P0-优化测试结果报告.md  SMOKE测试详细报告.md  TASK-06-StrategyMode集成测试报告.md  TASK-09-A组优化报告.md  TASK-09-B组优化报告.md  TASK-09-C组优化报告.md  TASK-09-D组优化报告.md  TASK-09-优化组总报告.md  v4.0.10-P0-P1-改进实施报告.md  v4.0.10-测试验证报告.md  v4.0.5-P0优化实施总结.md  v4.0.5-TODO执行总结.md  v4.0.5-完整测试验证报告.md  v4.0.5-快速复核优化最终总结.md  v4.0.5-最终验证报告.md  v4.0.5-测试验证报告.md  v4.0.6-E2E测试报告.md  v4.0.6-P0优化实施总结.md  (+83 more)
(+614 files in other folders)
